# heltec-d20

./: DIAGNOSTIC-PLAN.md  FLASH_GUIDE.md  LICENSE  README.md  SPEC.md  STATUS.md
firmware/: Cargo.toml
firmware/.cargo/: config.toml
firmware/src/: main.rs
shared/: Cargo.toml
shared/src/: animation.rs  dice.rs  history.rs  lib.rs  sprites.rs  ui.rs
simulator/: Cargo.toml
simulator/src/: main.rs
