[package]
name = "heltec-d20-firmware"
version = "0.1.0"
edition = "2021"

[dependencies]
esp-hal = { version = "1", features = ["esp32s3"] }
esp-alloc = "0.7"
esp-backtrace = { version = "0.15", features = ["esp32s3", "panic-handler", "println"] }
esp-println = { version = "0.13", features = ["esp32s3", "log"] }
log = "0.4"

# Display — direct embedded-graphics (no ratatui on firmware)
ssd1306 = "0.9"
embedded-graphics = "0.8"

# Shared dice logic only (no UI — we render with embedded-graphics directly)
heltec-d20-shared = { path = "../shared", default-features = false }

[profile.dev]
opt-level = "s"

[profile.release]
opt-level = "s"
lto = true
